# amina

./: .gitignore  Readme.md  amina.opam  analysis.opam  dune-project  example.json  example.md  example.scm  example_output.md  import_example.scm  test.json  test.md  tmp.txt
amina_guile/: amina_guile.c  amina_guile.ml  dune
lib/: aux.ml  dune  init.scm  json.ml  path.ml  rewrite.ml  scheme.ml
src/: amina.ml  dune  help.md  main.ml
src/lib/: aux.ml  dune  init.scm  json.ml  path.ml  rewrite.ml  scheme.ml
