(executable
  (name amina)
  (public_name amina)
  (package amina)
  (modules amina)
  (libraries
    core
    lwt
    lwt.unix
    lib
    guile.guile
    getopt
    angstrom
  )
  (preprocess (pps
    ppx_jane
    lwt_ppx
    ppx_deriving_yojson
    ppx_expect
    ppx_blob
  ))
  (modes exe)
  ; (link_flags (-cclib -fuse-ld=mold -cc clang++))
)
(install
 (files amina.exe)
 (section bin)
 (package amina)
 )